--- a/css/popup.css
+++ b/css/popup.css
@@ -28,10 +28,23 @@ a {
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
     border-bottom: 1px solid #444444;
     padding: 0.5em;
 }
 
 .body {
     padding: 0.5em;
+}
+
+.remove-button {
+    background-color: #0a0;
+    border: none;
+    color: white;
+    padding: 0.3em;
+    text-align: center;
+    font-size: 12px;
+    cursor: pointer;
+    align-self: center;
 }
